@@ -23,6 +23,8 @@ endif::[]
 
 https://github.com/elastic/apm-agent-go/compare/v1.7.2...master[View commits]
 
+- Add "recording" config option, to dynamically disable event recording {pull}737[(#737)]
+
 [[release-notes-1.x]]
 === Go Agent version 1.x
 
